--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0 15px;
   background: #040b14;
   overflow-y: auto;
+  padding-bottom: 50px;
 }
 #header .profile img {
   margin: 15px auto;
@@ -542,7 +543,7 @@ section {
 /*--------------------------------------------------------------
 # certificate in Details
 --------------------------------------------------------------*/
-.portfolio-details {
+/* .portfolio-details {
   padding-top: 40px;
 }
 .portfolio-details .portfolio-details-slider img {
@@ -591,7 +592,7 @@ section {
 }
 .portfolio-details .portfolio-description p {
   padding: 0;
-}
+} */
 
 /*--------------------------------------------------------------
 # Projects
@@ -722,7 +723,7 @@ section {
 # Contact
 --------------------------------------------------------------*/
 .contact {
-  padding-bottom: 130px;
+  padding-bottom: 20px;
 }
 .contact .info {
   padding: 30px;
@@ -885,7 +886,7 @@ section {
 /*--------------------------------------------------------------
 # Breadcrumbs
 --------------------------------------------------------------*/
-.breadcrumbs {
+/* .breadcrumbs {
   padding: 20px 0;
   background: #f9f9f9;
 }
@@ -920,13 +921,13 @@ section {
   .breadcrumbs ol li {
     display: inline-block;
   }
-}
+} */
 
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  padding: 15px;
+  padding: 10px;
   color: #f4f6fd;
   font-size: 14px;
   position: fixed;
@@ -934,7 +935,7 @@ section {
   bottom: 0;
   width: 250px;
   z-index: 9999;
-  background: #040b14;
+  background: #050505;
 }
 #footer .copyright {
   text-align: center;
